grammar

<statement>->
    <id> <idfollow> <statement> | ε

<id> ->
    id <index> <idsuffix>

<idsuffix> ->
    . id <index> <idsuffix> | ε

<index> ->
    [ <expression> ] <index> | ε

<idfollow>->
    ( <aggregate_list> )
    |
    <assignment>

<optfollow>->
    <idfollow> | ε

<assignment> ->
    assignop <expression>

<expression> ->
    num
    |
    string
    |
    <id> <optfollow>
    |
    <aggregate>

<aggregate> -> 
    { <aggregate_list> }

<aggregate_list> -> 
    <expression>  <aggregate_list'> | ε

<aggregate_list'> ->
    , <expression> <aggregate_list'> | ε
